<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="www.gymbuddy.com.gymbuddy.MainActivity"
        tools:showIn="@layout/activity_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"

            android:layout_alignParentLeft="true"

            android:layout_alignParentRight="true"

            android:layout_alignParentTop="true"

            android:orientation="vertical" >



            <TextView

                android:id="@+id/textView1"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:text="@string/RegistrationForm"

                android:textAppearance="?android:attr/textAppearanceLarge" />



            <TextView

                android:id="@+id/textView2"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/FirstName"

                android:textAppearance="?android:attr/textAppearanceMedium" />



            <EditText

                android:id="@+id/editText1"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textPersonName" >



                <requestFocus />

            </EditText>



            <TextView

                android:id="@+id/textView3"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/LastName"

                android:textAppearance="?android:attr/textAppearanceMedium" />



            <EditText

                android:id="@+id/editText2"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textPersonName" />


            <DatePicker
                android:layout_width="312dp"
                android:layout_height="62dp"
                android:id="@+id/datePicker" />

            <TextView

                android:id="@+id/textView4"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/Email"

                android:textAppearance="?android:attr/textAppearanceMedium" />



            <EditText

                android:id="@+id/editText3"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textEmailAddress" />



            <TextView

                android:id="@+id/textView5"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/Password"

                android:textAppearance="?android:attr/textAppearanceMedium" />



            <EditText

                android:id="@+id/editText4"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textPassword" />


            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female"
                    android:checked="true" />

            </RadioGroup>

            <TextView

                android:id="@+id/textView6"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/HomeGym"

                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/gymType_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:spinnerMode="dropdown" />

            <TextView

                android:id="@+id/textView7"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/GymLocation"

                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/gymLocation_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:spinnerMode="dropdown" />

            <CheckBox

                android:id="@+id/checkBox1"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:selectAllOnFocus="false"

                android:layout_gravity="center_horizontal"

                android:text="@string/AgreetoTerms"
                android:checked="false" />



            <Button

                android:id="@+id/button1"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:onClick="startsignup"

                android:text="@string/SignUp" />

        </LinearLayout>
    </ScrollView>
    </RelativeLayout>




